<resources>
    <string name="app_name">Lab2Activities</string>

    <!-- Strings related to Register or Sign in-->
    <string name="txt_email">Correo</string>
    <string name="txt_password">Contraseña</string>
    <string name="txt_confirm_password">Confirmar contraseña</string>

    <!-- Strings related to Register-->
    <string name="tv_title">Registro Nuevo Usuario</string>
    <string name="ib_user_content_description">Foto del usuario</string>
    <string name="txt_user_name">Nombres</string>
    <string name="btn_sign_up">Completar Registro</string>
    <string name="action_sign_in_login">Ya tienes una cuenta? <b>Ingresa</b></string>

    <!-- Strings related to login -->
    <string name="btn_sign_in">Ingresar</string>
    <string name="action_log_in_signup">No tienes una cuenta? <b>Registrate</b></string>

    <!-- Strings in lab 1 -->
    <string name="tv_plates">Platos</string>
    <string name="tv_drinks">Bebidas</string>
    <string name="tv_main">¿Ya sabes qué deseas agregar hoy?</string>

    <string name="txt_plate_name">Nombre</string>
    <string name="txt_plate_price">Precio</string>
    <string name="cb_plate_morning">Mañana</string>
    <string name="cb_plate_afternoon">Tarde</string>
    <string name="cb_plate_night">Noche</string>
    <string name="rb_plate_entrance">Entrada</string>
    <string name="rb_plate_main">Plato fuerte</string>
    <string name="btn_plate_timer">Tiempo de preparación</string>
    <string name="txt_plate_ingredients">Ingredientes</string>
    <string name="ib_plate_content_description">Foto del plato</string>
    <string name="btn_plate_save">Guardar</string>
    <string name="btn_plate_reset">Limpiar</string>
    <string name="btn_plate_exit">Salir</string>

    <string name="iv_plate_content_description">Foto cargada</string>
    <string name="tv_plate_name">Nombre: </string>
    <string name="tv_plate_price">Precio COP: </string>
    <string name="tv_plate_timetable">Horario: </string>
    <string name="tv_plate_type">Tipo: </string>
    <string name="tv_plate_time">Tiempo: </string>
    <string name="tv_plate_ingredients">Ingredientes: </string>

    <string name="txt_drink_name">Nombre</string>
    <string name="txt_drink_price">Precio</string>
    <string name="txt_drink_ingredients">Ingredientes</string>
    <string name="ib_drink_content_description">Foto de la bebida</string>
    <string name="btn_drink_save">Guardar</string>
    <string name="btn_drink_reset">Limpiar</string>
    <string name="btn_drink_exit">Salir</string>

    <string name="iv_drink_content_description">Foto cargada</string>
    <string name="tv_drink_name">Nombre: </string>
    <string name="tv_drink_price">Price: </string>
    <string name="tv_drink_ingredients">Ingredientes: </string>

</resources>
