<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.75"
            android:background="@color/colorIconsText">

            <EditText
                android:id="@+id/et_drink_price"
                style="@android:style/Widget.Material.Light.EditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/et_drink_name"
                android:layout_below="@+id/et_drink_name"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:hint="@string/txt_drink_price"
                android:inputType="number"
                android:layout_alignLeft="@+id/et_drink_name"
                tools:targetApi="lollipop" />

            <EditText
                android:id="@+id/et_drink_ingredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/et_drink_price"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:hint="@string/txt_drink_ingredients"
                android:inputType="text|textMultiLine"
                android:layout_alignParentLeft="true" />

            <EditText
                android:id="@+id/et_drink_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ib_drink_add_photo"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:ems="10"
                android:hint="@string/txt_drink_name"
                android:inputType="text|textCapSentences" />


            <ImageButton
                android:id="@+id/ib_drink_add_photo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/ib_drink_content_description"
                android:onClick="ibLoadImageDrinks"
                app:srcCompat="@android:drawable/ic_input_add" />

            <Button
                android:id="@+id/button3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/ib_drink_add_photo"
                android:layout_below="@+id/et_drink_ingredients"
                android:onClick="resetInputsDrinks"
                android:text="@string/btn_drink_reset"
                android:layout_alignRight="@+id/ib_drink_add_photo" />

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/button3"
                android:layout_toStartOf="@+id/button3"
                android:onClick="showDataDrinks"
                android:text="@string/btn_drink_save"
                android:layout_toLeftOf="@+id/button3" />

            <Button
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/button3"
                android:layout_alignBottom="@+id/button3"
                android:layout_toEndOf="@+id/button3"
                android:onClick="exitDrinks"
                android:text="@string/btn_drink_exit"
                android:layout_toRightOf="@+id/button3" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.25"
            android:background="@color/colorLightPrimary">

            <ImageView
                android:id="@+id/iv_drink_add_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="17dp"
                android:contentDescription="@string/iv_drink_content_description"
                app:srcCompat="@android:drawable/ic_menu_gallery"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="17dp" />

            <TextView
                android:id="@+id/tv_drink_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignTop="@+id/iv_drink_add_image"
                android:layout_marginTop="15dp"
                android:layout_toEndOf="@+id/iv_drink_add_image"
                android:text="@string/tv_drink_name"
                android:layout_toRightOf="@+id/iv_drink_add_image"
                android:layout_alignParentRight="true" />

            <TextView
                android:id="@+id/tv_drink_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/tv_drink_name"
                android:layout_toEndOf="@+id/iv_drink_add_image"
                android:text="@string/tv_drink_price"
                android:layout_toRightOf="@+id/iv_drink_add_image"
                android:layout_alignParentRight="true" />

            <TextView
                android:id="@+id/tv_drink_ingredients"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_below="@+id/tv_drink_price"
                android:layout_toEndOf="@+id/iv_drink_add_image"
                android:text="@string/tv_drink_ingredients"
                android:layout_toRightOf="@+id/iv_drink_add_image"
                android:layout_alignParentRight="true" />
        </RelativeLayout>

    </LinearLayout>