<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="co.edu.udea.compumovil.gr06_20181.lab2.MainActivity">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:src="@drawable/user" />

    <EditText
        android:id="@+id/txt_email_L"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_email"
        android:inputType="text|textEmailAddress"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/txt_password_L"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_password"
        android:inputType="textPassword"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="10dp">

        <Button
            android:id="@+id/bt_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/background_dark"
            android:onClick="sigIn"
            android:text="@string/btn_sign_in"
            android:textColor="@android:color/background_light" />


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="exit"
            android:text="Salir" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="10dp">

        <Button
            android:id="@+id/bt_register"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:onClick="register"
            android:text="@string/action_log_in_signup" />

    </LinearLayout>


</LinearLayout>

