<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="co.edu.udea.compumovil.gr06_20181.lab2.activities.SelectionActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="221dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="52dp"
        android:fontFamily="casual"
        android:text="@string/tv_main"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton2"
        style="@android:style/Widget.Material.Light.ImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="36dp"
        android:backgroundTint="@color/colorLightPrimary"
        android:contentDescription="@string/tv_plates"
        android:onClick="showPlates"
        android:tint="@color/colorTextPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/plates"
        tools:targetApi="lollipop" />

    <ImageButton
        android:id="@+id/imageButton3"
        style="@android:style/Widget.Material.Light.ImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="36dp"
        android:backgroundTint="@color/colorLightPrimary"
        android:contentDescription="@string/tv_drinks"
        android:onClick="showDrinks"
        android:tint="@color/colorTextPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/drinks"
        android:layout_marginRight="8dp"
        tools:targetApi="lollipop" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="154dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:fontFamily="casual"
        android:text="@string/tv_plates"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton2"
        android:layout_marginLeft="24dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="159dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:fontFamily="casual"
        android:text="@string/tv_drinks"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton3"
        android:layout_marginRight="24dp" />



</android.support.constraint.ConstraintLayout>
